--- a/views/editPages/editEmail.hbs
+++ b/views/editPages/editEmail.hbs
@@ -46,7 +46,7 @@
       <li><h4>Last Name: {{ memberUse.lastName }} <a href="editLastName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Password: {{ memberUse.password }} <a href="editPassword?userId={{ memberUse._id }}">Edit</a></h4></li>
-      <li><h4>Email: <form action="/editEmail" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
+      <li><h4>Email: <form action="/editEmail/userId={{ memberUse._id }}" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
   <form action="/delProfile" method="post">
     <button name='deleteBtn' value="{{ memberUse.userName }}">Delete Account</button>
   </form>
