--- a/views/editPages/editFirstName.hbs
+++ b/views/editPages/editFirstName.hbs
@@ -41,7 +41,7 @@
 <div id="profileEdit">
   <ul id="acctEdit">
     <br><p>Profile Details</p>  <a id= "editAll" href="editEmail?userId={{ memberUse._id }}">Edit All</a><br>
-      <li><h4>First Name: <form action="/editFirstName" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
+      <li><h4>First Name: <form action="/editFirstName/userId={{ memberUse._id }}" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
       <li><h4>Middle Init: {{ memberUse.midInit }} <a href="editMidInit?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Last Name: {{ memberUse.lastName }} <a href="editLastName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
