--- a/views/editPages/editMidInit.hbs
+++ b/views/editPages/editMidInit.hbs
@@ -42,7 +42,7 @@
   <ul id="acctEdit">
     <br><p>Profile Details</p>  <a id= "editAll" href="editEmail?userId={{ memberUse._id }}">Edit All</a><br>
       <li><h4>First Name: {{ memberUse.firstName }} <a href="editFirstName?userId={{ memberUse._id }}">Edit</a></h4></li>
-      <li><h4>Middle Init: <form action="/editMidInit" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
+      <li><h4>Middle Init: <form action="/editMidInit/userId={{ memberUse._id }}" method="post"><input name="attrEdit" type="text" placeholder="Enter First Name"> <button>Make Change</button><form></h4></li>
       <li><h4>Last Name: {{ memberUse.lastName }} <a href="editLastName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>User Name: {{ memberUse.userName }} <a href="editUserName?userId={{ memberUse._id }}">Edit</a></h4></li>
       <li><h4>Password: {{ memberUse.password }} <a href="editPassword?userId={{ memberUse._id }}">Edit</a></h4></li>
